# dove

./: .gitignore  CMakeLists.txt  Makefile  README.md
backups/: CMakeLists-blanc.txt  CMakeLists-pauraque.txt
data/results/p160-b1/: N4dove5async16FileRandomReaderE-0.sw-intervals
data/results/p160-b32/: N4dove5async16FileRandomReaderE-0.sw-intervals
data/results/p5-b1/: N4dove5async16FileRandomReaderE-0.sw-intervals
data/results/p5-b32/: N4dove5async16FileRandomReaderE-0.sw-intervals
data/stopwatches/: N4dove5async16FileRandomReaderE-2.sw-intervals  stopwatch-msec-0.sw-intervals  stopwatch-usec-1.sw-intervals
scripts/: make-cdf.py  make-cdfs.sh  re-cmake.sh  run-test.sh
src/: DoveFileGenerator.cc  DoveFileReader.cc  DoveLogger.cc  DoveStopWatch.cc
src/includes/: DoveFileGenerator.hh  DoveFileReader.hh  DoveLogger.hh  DoveMeta.hh  DoveParam.hh  DoveStopWatch.hh
src/tests/: dove-generate.cc  dove-reader.cc  dove-test.cc
